Analysis section sort of ended

--- a/doc/TFG.bib
+++ b/doc/TFG.bib
@@ -156,3 +156,42 @@
   year={2003},
   organization={Springer}
 }
+
+@article{extrae,
+  title={Framework for a productive performance optimization},
+  author={Servat, Harald and Llort, Germ{\'a}n and Huck, Kevin and Gim{\'e}nez, Judit and Labarta, Jes{\'u}s},
+  journal={Parallel Computing},
+  volume={39},
+  number={8},
+  pages={336--353},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@inproceedings{paraver,
+  title={Paraver: A tool to visualize and analyze parallel code},
+  author={Pillet, Vincent and Labarta, Jes{\'u}s and Cortes, Toni and Girona, Sergi},
+  booktitle={Proceedings of WoTUG-18: transputer and occam developments},
+  volume={44},
+  number={1},
+  pages={17--31},
+  year={1995},
+  organization={Citeseer}
+}
+
+@inproceedings{dimemas,
+  title={Validation of Dimemas communication model for MPI collective operations},
+  author={Girona, Sergi and Labarta, Jes{\'u}s and Badia, Rosa M},
+  booktitle={European Parallel Virtual Machine/Message Passing Interface Users’ Group Meeting},
+  pages={39--46},
+  year={2000},
+  organization={Springer}
+}
+
+@inproceedings{basic_analysis,
+  title={Automatic analysis of speedup of MPI applications},
+  author={Casas, Marc and Badia, Rosa and Labarta, Jes{\'u}s},
+  booktitle={Proceedings of the 22nd annual international conference on Supercomputing},
+  pages={349--358},
+  year={2008}
+}
