--- a/doc/titlepage.tex
+++ b/doc/titlepage.tex
@@ -10,8 +10,8 @@
     \textsc{\large Facultat d'Informàtica de Barcelona}\\[0.4cm]
     {\large Bachelor Degree in Informatics Engineering}\\[0.1cm]
     {\large Computer Engineering Specialization}\\[0.1cm]
-    {\large Degree Final Project}\\[0.1cm]
-    {\large Thesis management course}\\[1cm]
+    {\large Degree Final Project}\\[1cm]
+%    {\large Thesis management course}\\[1cm]
 
     \HRule\\[0.4cm]
 
