new chapter and a bunch of things

--- a/doc/TFG.bib
+++ b/doc/TFG.bib
@@ -195,3 +195,10 @@
   pages={349--358},
   year={2008}
 }
+
+@misc{mn4userguide,
+  title={MareNostrum4 User's Guide},
+  organization={Barcelona Supercomputing Center},
+  url={http://www.bsc.es/support/MareNostrum4-ug.pdf},
+  note={accesed on 26/12/2020}
+}
