--- a/doc/background/hpc.tex
+++ b/doc/background/hpc.tex
@@ -1,6 +1,6 @@
 \section{HPC enviornment}
 
-For completeness concerning the work, I will explain the different concepts of an HPC environment, contextualized in the BSC infrastructure.
+For completeness concerning the work, I will explain the different concepts of an HPC environment, contextualized in the BSC Marenostrum4 infrastructure\cite{mn4userguide}.
 
 A supercomputer, also known as a cluster, is a set of machines interconnected, and usually coordinated to solve a problem. The machines are named nodes, and each has memory, CPU, storage, and is running an operating system.  On the Marenostrum4 platform, each node consists of 2 physical Intel Xeon Platinum 8160 with 24 cores each and 96 GB of DDR4 RAM. There are also particular nodes with more memory available which are the same but with 384 GB of DDR4 RAM.
  
