--- a/doc/main.tex
+++ b/doc/main.tex
@@ -17,6 +17,8 @@
 
   \input{background/background.tex}
 
+  \input{performance-analysis/performance-analysis.tex}
+
   \clearpage
   \bibliographystyle{IEEEtran}
   \bibliography{TFG}
